// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test App no documents 1`] = `
<div
  className="App"
>
  <div>
    fallback
  </div>
  <div>
    <div
      className="SingleDocument"
    >
      <form>
        <div />
        <label>
          content
        </label>
        <input
          onChange={[Function]}
          value=""
        />
        <input
          onClick={[Function]}
          type="button"
          value="new"
        />
        <div />
      </form>
    </div>
  </div>
</div>
`;

exports[`test App one document 1`] = `
<div
  className="App"
>
  <div
    className="SingleDocument"
    id="123"
  >
    <form>
      <label>
        id
      </label>
      <input
        readOnly={true}
        value="123"
      />
      <label>
        content
      </label>
      <input
        onChange={[Function]}
        value="daft punk"
      />
      <input
        onClick={[Function]}
        type="button"
        value="submit"
      />
      <input
        onClick={[Function]}
        type="button"
        value="delete"
      />
    </form>
  </div>
  <div>
    <div
      className="SingleDocument"
    >
      <form>
        <div />
        <label>
          content
        </label>
        <input
          onChange={[Function]}
          value=""
        />
        <input
          onClick={[Function]}
          type="button"
          value="new"
        />
        <div />
      </form>
    </div>
  </div>
</div>
`;

exports[`test App one document and create one 1`] = `
<div
  className="App"
>
  <div
    className="SingleDocument"
    id="123"
  >
    <form>
      <label>
        id
      </label>
      <input
        readOnly={true}
        value="123"
      />
      <label>
        content
      </label>
      <input
        onChange={[Function]}
        value="daft punk"
      />
      <input
        onClick={[Function]}
        type="button"
        value="submit"
      />
      <input
        onClick={[Function]}
        type="button"
        value="delete"
      />
    </form>
  </div>
  <div>
    <div
      className="SingleDocument"
    >
      <form>
        <div />
        <label>
          content
        </label>
        <input
          onChange={[Function]}
          value=""
        />
        <input
          onClick={[Function]}
          type="button"
          value="new"
        />
        <div />
      </form>
    </div>
  </div>
</div>
`;

exports[`test App one document and create one 2`] = `
<div
  className="App"
>
  <div
    className="SingleDocument"
    id="123"
  >
    <form>
      <label>
        id
      </label>
      <input
        readOnly={true}
        value="123"
      />
      <label>
        content
      </label>
      <input
        onChange={[Function]}
        value="daft punk"
      />
      <input
        onClick={[Function]}
        type="button"
        value="submit"
      />
      <input
        onClick={[Function]}
        type="button"
        value="delete"
      />
    </form>
  </div>
  <div
    className="SingleDocument"
    id="3245"
  >
    <form>
      <label>
        id
      </label>
      <input
        readOnly={true}
        value="3245"
      />
      <label>
        content
      </label>
      <input
        onChange={[Function]}
        value="stronger"
      />
      <input
        onClick={[Function]}
        type="button"
        value="submit"
      />
      <input
        onClick={[Function]}
        type="button"
        value="delete"
      />
    </form>
  </div>
  <div>
    <div
      className="SingleDocument"
    >
      <form>
        <div />
        <label>
          content
        </label>
        <input
          onChange={[Function]}
          value=""
        />
        <input
          onClick={[Function]}
          type="button"
          value="new"
        />
        <div />
      </form>
    </div>
  </div>
</div>
`;
